[package]
name = "proton-call"
version = "3.0.0"
license = "MIT"
authors = ["Avery Murray <averylapine@gmail.com>"]
description = "Run any Windows program through Valve's Proton"
repository = "https://github.com/caverym/proton-caller"
readme = "README.md"
keywords = ["wine", "valve", "steam", "proton"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
toml = "0.5"
jargon-args = "0.2.3"
lliw = "*"
serde = { version = "1", features = ["derive"] }
